<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <EditText
        android:id="@+id/editTextName"
        style="@style/ContactEditTextView"
        android:hint="@string/edittext_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords|textPersonName"  >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextPhone"
        style="@style/ContactEditTextView"
        android:hint="@string/edittext_phone_hint"
        android:imeOptions="actionNext"
        android:inputType="phone" >
	</EditText>

    <EditText
        android:id="@+id/editTextEmail"
        style="@style/ContactEditTextView"
        android:hint="@string/edittext_email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress" >
    </EditText>

    <TextView
        android:id="@+id/textViewAddressLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textview_address_label"
        android:padding="5dp"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextStreet"
        style="@style/ContactEditTextView"
        android:hint="@string/edittext_street_hint"
        android:imeOptions="actionNext" />

    <EditText
        android:id="@+id/editTextCityStateZip"
        style="@style/ContactEditTextView"
        android:hint="@string/edittext_citystatezip_hint"
        android:imeOptions="actionNext" />

    <Button
        android:id="@+id/buttonSaveContact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/button_save" />

</LinearLayout>
